--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ Hardware/DeviceSheets/*.LOG
 LowLevel/CanStepDriverPowerstep/build
 LowLevel/CanStepDriverMosfets/build
 
+build
+
 # User-specific uVision files
 *.opt
 *.uvopt
@@ -49,44 +51,5 @@ LowLevel/CanStepDriverMosfets/build
 *.lib
 *.obj
 *.o
+*.a
 *.sbr
-
-# Build files
-# define exception below if needed
-*.bat
-*._ia
-*.__i
-*._ii
-
-# Generated output files
-/Listings/*
-/Objects/*
-
-# Other files
-*.build_log.htm
-*.cdb
-*.dep
-*.ic
-*.lin
-*.lnp
-*.orc
-# define exception below if needed
-*.pack
-# define exception below if needed
-*.pdsc
-*.plg
-# define exception below if needed
-*.sct
-*.sfd
-*.sfr
-
-# Miscellaneous
-*.tra
-*.bin
-*.fed
-*.l1p
-*.l2p
-*.iex
-
-# To explicitly override the above, define any exceptions here; e.g.:
-# !my_customized_scatter_file.sct
