--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,56 +12,50 @@ set(CMAKE_OBJDUMP arm-none-eabi-objdump)
 set(SIZE arm-none-eabi-size)
 set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)
 
-project(CanStepDriverPowerstep)
+project(CanStepDriver)
 set(PROJECT_BINARY_DIR build)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_C_STANDARD 11)
 
+# set(TARGET CanStepDriverPowerstep)
+# set(TARGET CanStepDriverMosfets)
+set(TARGET CanStepDriverF429)
+
+message(TARG="$ENV{TARG}")
+
 set(MCPU cortex-m4)
 
-add_compile_definitions(ARM_MATH_CM4;ARM_MATH_MATRIX_CHECK;ARM_MATH_ROUNDING)
+add_compile_definitions(ARM_MATH_CM4; ARM_MATH_MATRIX_CHECK; ARM_MATH_ROUNDING)
 add_compile_options(-mfloat-abi=hard -mfpu=fpv4-sp-d16)
-add_link_options(-mfloat-abi=hard -mfpu=fpv4-sp-d16)
-
 add_compile_options(-mcpu=${MCPU} -mthumb -mthumb-interwork)
 add_compile_options(-ffunction-sections -fdata-sections -fno-common -fmessage-length=0)
 
-include_directories(
-	${CMAKE_SOURCE_DIR}/CoreApp
-	${CMAKE_SOURCE_DIR}/LowLevel
-	)
+# set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/LowLevel/${TARGET}/STM32G431CBTx_FLASH.ld)
+set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/LowLevel/${TARGET}/STM32F429ZITx_FLASH.ld)
 
-# add_definitions(#[[TODO insert definitions, ex. -DUSE_HAL_DRIVER -DCORE_CM4 -DDEBUG -DSTM32H745xx)
-
-file(GLOB_RECURSE SOURCES
-        "CoreApp/*.*"
-        # "Drivers/*.*" "../Drivers/*.*"
-        # "../Common/*.*"
-        #[[TODO rest of cource locations]]
-        )
-
-set(LINKER_SCRIPT ${CMAKE_SOURCE_DIR}/LowLevel/CanStepDriverPowerstep/STM32G431CBTx_FLASH.ld)
-# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${PROJECT_SOURCE_DIR}/build/${PROJECT_NAME}.map")
-
+add_link_options(-mfloat-abi=hard -mfpu=fpv4-sp-d16)
 add_link_options(-Wl,-gc-sections,--print-memory-usage,-Map=${PROJECT_SOURCE_DIR}/${PROJECT_BINARY_DIR}/${PROJECT_NAME}.map)
 add_link_options(-mcpu=${MCPU} -mthumb -mthumb-interwork)
 add_link_options(-specs=nosys.specs -T ${LINKER_SCRIPT})
 # add_link_options(-L${PROJECT_SOURCE_DIR}/LowLevel/CanStepDriverPowerstep -lc -lm -lnosys -lLowLevel)
 add_link_options(-lc -lm -lnosys)
+# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Map=${PROJECT_SOURCE_DIR}/build/${PROJECT_NAME}.map")
 
-add_executable(${PROJECT_NAME}.elf ${SOURCES} ${LINKER_SCRIPT})
-# set_target_properties(${PROJECT_BINARY_DIR}/${PROJECT_NAME}.elf PROPERTIES LINKER_LANGUAGE C)
+file(GLOB_RECURSE SOURCES
+	"CoreApp/*.*"
+)
 
-target_link_libraries(${PROJECT_NAME}.elf ${PROJECT_SOURCE_DIR}/LowLevel/${PROJECT_NAME}/libLowLevel.a)
+include_directories(
+	${CMAKE_SOURCE_DIR}/CoreApp
+	${CMAKE_SOURCE_DIR}/LowLevel
+)
 
-set(HEX_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.hex)
-set(BIN_FILE ${PROJECT_BINARY_DIR}/${PROJECT_NAME}.bin)
+add_executable(${TARGET}.elf ${SOURCES} ${LINKER_SCRIPT})
 
-# add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
-#         COMMAND ${CMAKE_OBJCOPY} -O ihex ${PROJECT_NAME}.elf ${HEX_FILE}
-#         # COMMAND ${CMAKE_OBJCOPY} -O binary -S $<TARGET_FILE:${PROJECT_NAME}.elf> ${BIN_FILE}
-#         COMMENT "Building ${HEX_FILE}
-# Building ${BIN_FILE}")
+target_link_libraries(${TARGET}.elf ${PROJECT_SOURCE_DIR}/LowLevel/${TARGET}/lib${TARGET}.a)
 
-add_custom_target(${PROJECT_NAME}.hex ALL DEPENDS ${PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Oihex ${PROJECT_NAME}.elf ${PROJECT_NAME}.hex)
-add_custom_target(${PROJECT_NAME}.bin ALL DEPENDS ${PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary -S ${PROJECT_NAME}.elf ${PROJECT_NAME}.bin)
+set(HEX_FILE ${PROJECT_BINARY_DIR}/${TARGET}.hex)
+set(BIN_FILE ${PROJECT_BINARY_DIR}/${TARGET}.bin)
+
+add_custom_target(${TARGET}.hex ALL DEPENDS ${TARGET}.elf COMMAND ${CMAKE_OBJCOPY} -Oihex ${TARGET}.elf ${TARGET}.hex)
+add_custom_target(${TARGET}.bin ALL DEPENDS ${TARGET}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary -S ${TARGET}.elf ${TARGET}.bin)
