--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,81 @@
 {
 	"files.associations": {
-		"main.h": "c"
-	}
+		"main.h": "c",
+		"algorithm": "cpp",
+		"array": "cpp",
+		"atomic": "cpp",
+		"cctype": "cpp",
+		"chrono": "cpp",
+		"clocale": "cpp",
+		"cmath": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"condition_variable": "cpp",
+		"cstddef": "cpp",
+		"cstdint": "cpp",
+		"cstdio": "cpp",
+		"cstdlib": "cpp",
+		"cstring": "cpp",
+		"cwchar": "cpp",
+		"exception": "cpp",
+		"initializer_list": "cpp",
+		"iosfwd": "cpp",
+		"iterator": "cpp",
+		"limits": "cpp",
+		"list": "cpp",
+		"map": "cpp",
+		"memory": "cpp",
+		"mutex": "cpp",
+		"new": "cpp",
+		"optional": "cpp",
+		"ratio": "cpp",
+		"shared_mutex": "cpp",
+		"stdexcept": "cpp",
+		"string": "cpp",
+		"system_error": "cpp",
+		"thread": "cpp",
+		"tuple": "cpp",
+		"type_traits": "cpp",
+		"typeinfo": "cpp",
+		"unordered_map": "cpp",
+		"utility": "cpp",
+		"vector": "cpp",
+		"xhash": "cpp",
+		"xmemory": "cpp",
+		"xstddef": "cpp",
+		"xstring": "cpp",
+		"xtr1common": "cpp",
+		"xtree": "cpp",
+		"xutility": "cpp",
+		"bit": "cpp",
+		"bitset": "cpp",
+		"csetjmp": "cpp",
+		"ctime": "cpp",
+		"deque": "cpp",
+		"forward_list": "cpp",
+		"fstream": "cpp",
+		"functional": "cpp",
+		"iomanip": "cpp",
+		"ios": "cpp",
+		"iostream": "cpp",
+		"istream": "cpp",
+		"numeric": "cpp",
+		"ostream": "cpp",
+		"queue": "cpp",
+		"random": "cpp",
+		"set": "cpp",
+		"sstream": "cpp",
+		"stack": "cpp",
+		"streambuf": "cpp",
+		"unordered_set": "cpp",
+		"variant": "cpp",
+		"xfacet": "cpp",
+		"xiosbase": "cpp",
+		"xlocale": "cpp",
+		"xlocinfo": "cpp",
+		"xlocmon": "cpp",
+		"xlocnum": "cpp",
+		"xloctime": "cpp"
+	},
+	"cmake.generator": "Unix Makefiles"
 }
