--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,20 +59,18 @@
         "type": "cmake",
         "label": "CMake build F429",
         "command": "build",
-        "options": {"environment": {"TARG": "test_string"}},
         "targets": [
             "CanStepDriverF429.elf"
         ],
         "group": "build",
         "problemMatcher": [],
         "detail": "Build driver with Mosfets",
-        "dependsOn": ["make CanStepDriverF429"]
+        "dependsOn": ["make CanStepDriverF429"],
     },
     {
         "type": "cmake",
         "label": "CMake build All",
         "command": "build",
-        "options": {"environment": {"TARG": "test_string"}},
         "targets": [
             "ALL_BUILD"
         ],
@@ -87,7 +85,7 @@
         "command": "STM32_Programmer_CLI",
         "args": [
             "-c port=SWD",
-            "-d build/CanStepDriver.elf -v"
+            "-d build/CanStepDriverF429.elf -v"
         ]
     }
 ]
